--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>À la Maison Boutique Guesthouse</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="description"
+        content="À la Maison Boutique Guesthouse offers luxury and serenity in Parys, combining Victorian-style elegance with modern comfort and convenience.">
+    <meta name="keywords"
+        content="À la Maison Boutique Guesthouse, Parys accommodation, Parys akkommodasie, luxury guesthouse, luxury accommodation, romantic getaway, weekend escape">
 </head>
 
 <body>
@@ -14,14 +18,13 @@
             <div class="scrim">
                 <nav id="top_menu">
                     <a href="index.html">
-                        <img src="imgs/logo.png" id="logo"
-                            alt="À la Maison Boutique Guesthouse 4-star Accommodation"><br />
+                        <img src="imgs/logo.png" id="logo" alt="À la Maison Boutique Guesthouse 4-star Accommodation">
+                        <br />
                     </a>
                     <a href="rooms.html">Our Rooms</a>
-                    <a href="https://www.nightsbridge.co.za/bridge/book?bbid=23366" class="book_now">Book
-                        Now</a>
-                    <a href="packages.html">Activity Packages</a>
-                    <a href="terms.html">Ts & Cs</a>
+                    <a href="https://www.nightsbridge.co.za/bridge/book?bbid=23366" class="book_now">Book Now</a>
+                    <a href="activities.html">Activity Packages</a>
+                    <a href="info.html">Guest Information</a>
                     <a href="contact.html">Contact Us</a>
                 </nav>
             </div>
@@ -33,24 +36,14 @@
                 <div>
                     <h2>Welcome home</h2>
                     <p class="embiggen_first">Combining old-world charm with modern comfort and convenience, À la Maison
-                        is a luxurious
-                        guesthouse
-                        with
-                        Victorian style furniture and decorations. Built in 1913, the house is one of the first to be
-                        constructed during the rebuilding of Parys after the Anglo Boer War from 1889 until 1902 left
-                        most
-                        of
-                        the buildings in town destroyed.</p>
+                        is a luxurious guesthouse with Victorian style furniture and decorations. Built in 1913, the
+                        house is one of the first to be constructed during the rebuilding of Parys after the Anglo Boer
+                        War from 1889 until 1902 left most of the buildings in town destroyed.</p>
                     <p class="embiggen_first">Centrally located in Parys, À la Maison is within easy walking distance of
-                        all
-                        the main attractions, shops, pubs and restaurants. In addition to exploring the sights and
-                        sounds in
-                        town, guests can also choose from a variety of different activity packages ranging from hiking
-                        and
-                        game
-                        drives to abseiling and river rafting. There is no shortage of exciting things to see and do in
-                        and
-                        around the tourist hub of the Vredefort Dome.</p>
+                        all the main attractions, shops, pubs and restaurants. In addition to exploring the sights and
+                        sounds in town, guests can also choose from a variety of different activity packages ranging
+                        from hiking and game drives to abseiling and river rafting. There is no shortage of exciting
+                        things to see and do in and around the tourist hub of the Vredefort Dome.</p>
                     <div class="gallery">
                         <img src="imgs/chevronLeft.png" class="chevron prev" onclick="prevImage()"
                             alt="Previous Photo" />
@@ -88,19 +81,14 @@
                     </div>
                     <script src="scripts/indexGallery.js" defer></script>
                     <p class="embiggen_first">Guests looking for a quiet getaway instead may enjoy a tranquil afternoon
-                        in our secluded
-                        gardens,
-                        leisurely riverside walks and nights spent relaxing in front of the fireplace. À la Maison is a
-                        home
-                        away from home to those who want to escape the hustle and bustle of city life and experience the
-                        serenity of small town hospitality.</p>
+                        in our secluded gardens, leisurely riverside walks and nights spent relaxing in front of the
+                        fireplace. À la Maison is a home away from home to those who want to escape the hustle and
+                        bustle of city life and experience the serenity of small town hospitality.</p>
                     <p class="embiggen_first">As an owner-managed establishment, we dedicate ourselves to exceed your
-                        expectations. We are
-                        looking
-                        forward to welcoming you to À la Maison for an unforgettable experience.</p>
+                        expectations. We are looking forward to welcoming you to À la Maison for an unforgettable
+                        experience.</p>
                     <p lang="af" class="handwriting">Kom en geniet opregte Afrikaanse gasvryheid soos jy net in die
-                        Vrystaat
-                        kry!</p>
+                        Vrystaat kry!</p>
                     <div class="button-container">
                         <a href="rooms.html" class="button">Our Rooms</a>
                         <a id="booking" class="button book_now" target="_blank"
@@ -127,17 +115,15 @@
                         <p><b>Activity Packages</b> - À la Maison offers several exciting activity package deals to
                             guests.</p>
                     </div>
+                </aside>
             </div>
-            </aside>
-        </div>
         </div>
     </main>
     <footer>
         <div class="container">
             <div class="contact">
                 <div class="contact_row"><img src="imgs/phone.png" alt="Phone" class="contact_icon"><a
-                        href="tel:+27 83 683 8331">+27 83 683
-                        8331</a></div>
+                        href="tel:+27 83 683 8331">+27 83 683 8331</a></div>
                 <div class="contact_row"><img src="imgs/email.png" alt="Email" class="contact_icon"><a
                         href="mailto:info@alamaisonparys.co.za">info@alamaisonparys.co.za</a></div>
                 <div class="contact_row"><img src="imgs/location.png" alt="Location" class="contact_icon"><a
@@ -157,6 +143,24 @@
                 <div>
                     <img id="tgc" src="https://www.tourismgrading.co.za/themes/simple/img/logo.jpg"
                         alt="Tourism Grading Council of South Africa">
+                </div>
+                <div id="tripAdvisor" class="hidden">
+                    <div id="TA_cdsratingsonlynarrow975" class="TA_cdsratingsonlynarrow">
+                        <ul id="GIFQp04BCsGA" class="TA_links 4afM23NqB2K">
+                            <li id="SmfPqA" class="QnNiE9zHX"><a target="_blank"
+                                    href="https://www.tripadvisor.com/Hotel_Review-g1195970-d11667357-Reviews-A_la_Maison-Parys_Free_State.html"><img
+                                        src="https://www.tripadvisor.com/img/cdsi/img2/branding/v2/Tripadvisor_lockup_horizontal_secondary_registered-18034-2.svg"
+                                        alt="TripAdvisor" /></a></li>
+                        </ul>
+                    </div>
+                    <script async
+                        src="https://www.jscache.com/wejs?wtype=cdsratingsonlynarrow&amp;uniq=975&amp;locationId=11667357&amp;lang=en_US&amp;border=true&amp;display_version=2"
+                        data-loadtrk onload="loaded()"></script>
+                    <script>function loaded() {
+                            setTimeout(() => document.getElementById("tripAdvisor").classList.remove(["hidden"]), 1000);
+                            this.loadtrk = true
+                        }
+                    </script>
                 </div>
             </div>
         </div>
