TripAdvisor widget tweak, activity package images

--- a/contact.html
+++ b/contact.html
@@ -65,32 +65,21 @@
             <div class="stickers">
                 <div>
                     <a href="https://www.afristay.com/p/24677" target="_blank" rel="noopener">
-                        <img id="afristay"
-                            src="https://www.afristay.com/media/pictures/places/1255/accommodirect-member.png"
-                            alt="Afristay Valued Member">
+                        <img id="afristay" src="imgs/afristay_member.png" alt="Afristay Valued Member">
                     </a>
                 </div>
                 <div>
-                    <img id="tgc" src="https://www.tourismgrading.co.za/themes/simple/img/logo.jpg"
-                        alt="Tourism Grading Council of South Africa">
+                    <img id="tgc" src="imgs/tgc.png" alt="Tourism Grading Council of South Africa">
                 </div>
-                <div id="tripAdvisor" class="hidden">
+                <div id="tripAdvisor">
                     <div id="TA_cdsratingsonlynarrow975" class="TA_cdsratingsonlynarrow">
                         <ul id="GIFQp04BCsGA" class="TA_links 4afM23NqB2K">
-                            <li id="SmfPqA" class="QnNiE9zHX"><a target="_blank"
-                                    href="https://www.tripadvisor.com/Hotel_Review-g1195970-d11667357-Reviews-A_la_Maison-Parys_Free_State.html"><img
-                                        src="https://www.tripadvisor.com/img/cdsi/img2/branding/v2/Tripadvisor_lockup_horizontal_secondary_registered-18034-2.svg"
-                                        alt="TripAdvisor" /></a></li>
+                            <li id="SmfPqA" class="QnNiE9zHX"></li>
                         </ul>
                     </div>
                     <script async
-                        src="https://www.jscache.com/wejs?wtype=cdsratingsonlynarrow&amp;uniq=975&amp;locationId=11667357&amp;lang=en_US&amp;border=true&amp;display_version=2"
-                        data-loadtrk onload="loaded()"></script>
-                    <script>function loaded() {
-                            setTimeout(() => document.getElementById("tripAdvisor").classList.remove(["hidden"]), 1000);
-                            this.loadtrk = true
-                        }
-                    </script>
+                        src="https://www.jscache.com/wejs?wtype=cdsratingsonlynarrow&amp;uniq=975&amp;locationId=11667357&amp;lang=en_US&amp;border=false&amp;display_version=2"
+                        data-loadtrk onload="this.loadtrk = true"></script>
                 </div>
             </div>
             <div id="copyright">
