Add room ratess and photos

--- a/activities.html
+++ b/activities.html
@@ -35,7 +35,7 @@
                     least two evenings have the option to choose from many exciting activity packages as an add-on
                     to their accommodation.</p>
                 <div>
-                    <ul class="activities_list">
+                    <ul class="list_margins">
                         <li>River Rafting and Tubing</li>
                         <li>Gondola Rides</li>
                         <li>Inflatable Booze Cruise</li>
