--- a/rooms.html
+++ b/rooms.html
@@ -28,10 +28,199 @@
     </header>
     <main>
         <div class="container">
+            <h2>Our Rooms</h2>
             <div class="responsive">
                 <div>
-                    <h2>Our Rooms</h2>
+                    <p class="embiggen_first">À la Maison Boutique Guesthouse has five exclusive rooms on offer.
+                    </p>
+                    <p class="embiggen_first">Please note that all rates are per room per evening, and all rooms
+                        sleep a maximum of two adults.</p>
+                    <section class="room">
+                        <div class="rate_row">
+                            <h3>Tessera</h3>
+                            <p>Rate <span class="embiggen">R1,250</span></p>
+                        </div>
+                        <div class="gallery">
+                            <img src="imgs/chevronLeft.png" class="chevron prev" onclick="prevGalleryImage(0)"
+                                alt="Previous Photo" />
+                            <img src="imgs/chevronRight.png" class="chevron next" onclick="nextGalleryImage(0)"
+                                alt="Next Photo" />
+                            <div>
+                                <img class="galleryImg opaque" src="imgs/tessera01.jpg" alt="Tessera" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/tessera02.jpg" alt="Tessera" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/tessera03.jpg" alt="Tessera" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/tessera04.jpg" alt="Tessera" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/tessera05.jpg" alt="Tessera" />
+                            </div>
+                        </div>
+                        <br />
+                        <p>Our Honeymoon Suite - Luxurious and comfortable with French romantic ambience. Walk-in
+                            bathroom with shower and bath.</p>
+                    </section>
+                    <section class="room">
+                        <div class="rate_row">
+                            <h3>Lavender</h3>
+                            <p>Rate <span class="embiggen">R1,100</span></p>
+                        </div>
+                        <div class="gallery">
+                            <img src="imgs/chevronLeft.png" class="chevron prev" onclick="prevGalleryImage(1)"
+                                alt="Previous Photo" />
+                            <img src="imgs/chevronRight.png" class="chevron next" onclick="nextGalleryImage(1)"
+                                alt="Next Photo" />
+                            <div>
+                                <img class="galleryImg opaque" src="imgs/lavender01.jpg" alt="Lavender" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/lavender02.jpg" alt="Lavender" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/lavender03.jpg" alt="Lavender" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/lavender04.jpg" alt="Lavender" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/lavender05.jpg" alt="Lavender" />
+                            </div>
+                        </div>
+                        <br />
+                        <p>Victorian charm with open plan bathroom. Door to private garden.</p>
+                    </section>
+                    <section class="room">
+                        <div class="rate_row">
+                            <h3>Rose</h3>
+                            <p>Rate <span class="embiggen">R950</span></p>
+                        </div>
+                        <div class="gallery">
+                            <img src="imgs/chevronLeft.png" class="chevron prev" onclick="prevGalleryImage(2)"
+                                alt="Previous Photo" />
+                            <img src="imgs/chevronRight.png" class="chevron next" onclick="nextGalleryImage(2)"
+                                alt="Next Photo" />
+                            <div>
+                                <img class="galleryImg opaque" src="imgs/rose01.jpg" alt="Rose" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/rose02.jpg" alt="Rose" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/rose03.jpg" alt="Rose" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/rose04.jpg" alt="Rose" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/rose05.jpg" alt="Rose" />
+                            </div>
+                        </div>
+                        <br />
+                        <p>Romantic antique interior with standing bath in private bathroom.</p>
+                    </section>
+                    <section class="room">
+                        <div class="rate_row">
+                            <h3>Magnolia</h3>
+                            <p>Rate <span class="embiggen">R950</span></p>
+                        </div>
+                        <div class="gallery">
+                            <img src="imgs/chevronLeft.png" class="chevron prev" onclick="prevGalleryImage(3)"
+                                alt="Previous Photo" />
+                            <img src="imgs/chevronRight.png" class="chevron next" onclick="nextGalleryImage(3)"
+                                alt="Next Photo" />
+                            <div>
+                                <img class="galleryImg opaque" src="imgs/magnolia01.jpg" alt="Magnolia" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/magnolia02.jpg" alt="Magnolia" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/magnolia03.jpg" alt="Magnolia" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/magnolia04.jpg" alt="Magnolia" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/magnolia05.jpg" alt="Magnolia" />
+                            </div>
+                        </div>
+                        <br />
+                        <p>Romantic French flair with private outdoor patio.</p>
+                    </section>
+                    <section class="room">
+                        <div class="rate_row">
+                            <h3>Lily</h3>
+                            <p>Rate <span class="embiggen">R950</span></p>
+                        </div>
+                        <div class="gallery">
+                            <img src="imgs/chevronLeft.png" class="chevron prev" onclick="prevGalleryImage(4)"
+                                alt="Previous Photo" />
+                            <img src="imgs/chevronRight.png" class="chevron next" onclick="nextGalleryImage(4)"
+                                alt="Next Photo" />
+                            <div>
+                                <img class="galleryImg opaque" src="imgs/lily01.jpg" alt="Lily" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/lily02.jpg" alt="Lily" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/lily03.jpg" alt="Lily" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/lily04.jpg" alt="Lily" />
+                            </div>
+                            <div>
+                                <img class="galleryImg transparent" src="imgs/lily05.jpg" alt="Lily" />
+                            </div>
+                        </div>
+                        <br />
+                        <p>Romantic French flair with private outdoor patio.</p>
+                    </section>
+                    <script src="scripts/gallery.js" defer></script>
+                    <p class="embiggen_first">We are pleased to offer special discounts for midweek bookings, single
+                        occupancy, or stays of two or more evenings. Please note that these discounts are subject to
+                        availability and must be requested in advance.
+                    <p class="embiggen_first">Additionally, we offer a delicious continental breakfast in-house,
+                        available upon request with a day's notice. Please kindly note that this service incurs an
+                        additional fee and is not available on the morning of departure.</p>
+                    <div class="button-container">
+                        <a href="contact.html" class="button">Contact Us</a>
+                        <a id="booking" class="button book_now" target="_blank"
+                            href="https://www.nightsbridge.co.za/bridge/book?bbid=23366">Book Now</a>
+                    </div>
                 </div>
+                <aside>
+                    <p><b>Standard Amenities in All Rooms</b></p>
+                    <div class="smaller_font">
+                        <p>Please enjoy the following provided in all our rooms.</p>
+                        <ul class="list_margins">
+                            <li>En-suite bathroom</li>
+                            <li>Airconditioning</li>
+                            <li>Mini refrigerator</li>
+                            <li>Television and select DStv channels</li>
+                            <li>Free WiFi</li>
+                            <li>Tea / Coffee station</li>
+                        </ul>
+                    </div>
+                    <br />
+                    <p><b>Guesthouse Facilities</b></p>
+                    <div class="smaller_font">
+                        <p>We also offer the following facilities for your comfort and peace of mind.</p>
+                        <ul class="list_margins">
+                            <li>Secure parking</li>
+                            <li>Backup power</li>
+                            <li>Secluded gardens</li>
+                            <li>Lounge with fireplace</li>
+                            <li>Braai facilities</li>
+                            <li>Outdoor splash pool</li>
+                        </ul>
+                    </div>
+                </aside>
             </div>
         </div>
     </main>
