--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>À la Maison Boutique Guesthouse</title>
     <link rel="stylesheet" href="style-06-18.css">
+    <link rel="icon" href="imgs/favicon.png" />
     <meta name="description"
         content="À la Maison Boutique Guesthouse offers luxury and serenity in Parys, combining Victorian-style elegance with modern comfort and convenience.">
     <meta name="keywords"
@@ -83,9 +84,9 @@
                     <br />
                     <script src="scripts/gallery.js" defer></script>
                     <p class="embiggen_first">Guests looking for a quiet getaway instead may enjoy a tranquil afternoon
-                        in our secluded gardens, leisurely riverside walks and nights spent relaxing in front of the
-                        fireplace. À la Maison is a home away from home to those who want to escape the hustle and
-                        bustle of city life and experience the serenity of small town hospitality.</p>
+                        in our secluded gardens and leisurely riverside walks. À la Maison is a home away from home to
+                        those who want to escape the hustle and bustle of city life and experience the serenity of small
+                        town hospitality.</p>
                     <p class="embiggen_first">As an owner-managed establishment, we dedicate ourselves to exceed your
                         expectations. We are looking forward to welcoming you to À la Maison for an unforgettable
                         experience.</p>
