--- a/info.html
+++ b/info.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guest Information - À la Maison Boutique Guesthouse</title>
     <link rel="stylesheet" href="style-06-18.css">
+    <link rel="icon" href="imgs/favicon.png" />
 </head>
 
 <body>
