--- a/rooms.html
+++ b/rooms.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Rooms - À la Maison Boutique Guesthouse</title>
     <link rel="stylesheet" href="style-06-18.css">
+    <link rel="icon" href="imgs/favicon.png" />
 </head>
 
 <body>
@@ -220,7 +221,6 @@
                             <li>Secure parking</li>
                             <li>Backup power</li>
                             <li>Secluded gardens and outdoor seating</li>
-                            <li>Lounge with fireplace</li>
                             <li>Braai facilities</li>
                             <li>Outdoor splash pool</li>
                         </ul>
